# SimpleQTApp

./: CMakeLists.txt  README.md  data.json  datamodel.cpp  datamodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
